# edaslam

./: .gitmodules  README.md  requirement.txt
Sunray_swarm/sunray_drivers/wheeltec/turn_on_wheeltec_robot/launch/include/: robot_pose_ekf.launch
Sunray_swarm/sunray_drivers/wheeltec/turn_on_wheeltec_robot/params_costmap_car/param_mini_mec/: costmap_car_params.yaml  teb_local_planner_params.yaml
Sunray_swarm/sunray_drivers/wheeltec/turn_on_wheeltec_robot/scripts/: fused_odom_node.py
Sunray_swarm/sunray_swarm/: CMakeLists.txt  package.xml
Sunray_swarm/sunray_swarm/agent_control/: agent_terminal_station.cpp  rmtt_control.cpp  rmtt_control.h  rmtt_control_node.cpp  rmtt_tf.cpp  ugv_control.cpp  ugv_control.h  ugv_control_node.cpp
Sunray_swarm/sunray_swarm/demo_ugv/: ugv_circle.cpp  ugv_follow_rmtt.cpp  ugv_waypoint.cpp
Sunray_swarm/sunray_swarm/launch_ugv/: hokuyo_laser.launch  tianbot_driver.launch  ugv_control_node.launch  ugv_params.yaml  wheeltec_driver.launch
Sunray_swarm/sunray_swarm/orca/: Agent.cpp  Agent.h  RVOSimulator.cpp  RVOSimulator.h  orca.cpp  orca.h  orca_node.cpp  path_planning.cpp
Sunray_swarm/sunray_swarm_sim/: CMakeLists.txt  package.xml
Sunray_swarm/sunray_swarm_sim/include/: math_utils.h  printf_utils.h  ros_msg_utils.h
Sunray_swarm/sunray_swarm_sim/launch_orca_demo/: rmtt_pathplanning.launch  single_ugv_orca.launch  ugv_pathplanning.launch
Sunray_swarm/sunray_swarm_sim/launch_rmtt_demo/: rmtt_circle.launch  rmtt_follow_ugv.launch  rmtt_hover.launch  rmtt_waypoint.launch
Sunray_swarm/sunray_swarm_sim/launch_simulation/: agent_terminal_station.launch  multi_agent.rviz  multi_rmtt_orca_sim.launch  multi_rmtt_sim.sh  multi_rmtt_sim_1.launch  multi_rmtt_sim_2.launch  multi_ugv_orca_sim.launch  multi_ugv_sim.sh  multi_ugv_sim_1.launch  multi_ugv_sim_2.launch  single_agent.rviz  single_rmtt_sim.launch  single_ugv_sim.launch  swarm_sim.sh  swarm_sim_test.sh
Sunray_swarm/sunray_swarm_sim/launch_swarm_demo/: swarm_circle_rmtt.launch  swarm_circle_ugv.launch  swarm_dance_rmtt.launch  swarm_formation_rmtt.launch  swarm_formation_ugv.launch  swarm_leader_follower_rmtt.launch  swarm_leader_follower_ugv.launch  swarm_lemniscate_rmtt.launch  swarm_lemniscate_ugv.launch
Sunray_swarm/sunray_swarm_sim/launch_ugv_demo/: ugv_circle.launch  ugv_waypoint.launch
Sunray_swarm/sunray_swarm_sim/sim/: agent_sim.cpp  agent_sim.h  agent_sim_node.cpp
advanced_agent/: CMakeLists.txt  execute_agent.sh  execute_launch.sh  package.xml
advanced_agent/launch/: advanced_agent.launch
advanced_agent/src/: advanced_agent.py  dummy_agent.py  follow_waypoints.py  functions.py  plot_data.py
drl_agent/: CMakeLists.txt
drl_agent/config/: gmapping_turtlebot3.yaml  large_turtlebot3.yaml  my_turtlebot3_maze_params.yaml  rqt_multiplot.xml
drl_agent/launch/: evalDQN.launch  evalmapping.launch  trainDQN.launch  trainmapping.launch
drl_agent/newreward_results/: new_episode_rewards.txt  new_length_time.txt  training_start_time.txt
drl_agent/src/: evalGPPO.py  realcar_env.py  test_realcar.py  trainDQN.py  trainGPPO.py
drl_agent/src/models/: modelQL1000-100.pkl  modelQL1000-1000-poor.pkl
drl_agent/t=0.5_results/: 0.5episode_rewards.txt  0.5time_rewards.txt  training_start_time.txt
drl_agent/t=2_results/: 2episode_rewards.txt  2time_rewards.txt  length_time.txt  training_start_time.txt
drl_agent/yuanreward_results/: training_start_time.txt  yuan_episode_rewards.txt  yuan_length_time.txt  yuan_time_rewards.txt  备注.txt
m-explore/explore/include/explore/: explore.h
m-explore/explore/src/: explore.cpp
openai_ros/openai_ros/src/openai_ros/: gazebo_connection.py  openai_ros_common.py  robot_gazebo_env.py
openai_ros/openai_ros/src/openai_ros/robot_envs/: turtlebot3_env.py
openai_ros/openai_ros/src/openai_ros/task_envs/: task_envs_list.py
openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3/: large_world.py  turtlebot3_world.py
openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3/config/: turtlebot3_world.yaml
openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3_gmapping/: turtlebot3_gmapping.py
openai_ros/openai_ros/src/openai_ros/task_envs/turtlebot3_gmapping/config/: turtlebot3_gmapping.yaml
slam_gmapping/gmapping/src/: main.cpp  slam_gmapping.cpp  slam_gmapping.h
turtlebot3_simulations/turtlebot3_gazebo/launch/: alfajor.launch  large_world.launch  maze_3_6x6.launch  maze_4_metal_6x6.launch  turtlebot3_cycle_world.launch  turtlebot3_gmapping (copy).launch  turtlebot3_gmapping yuan.launch  turtlebot3_gmapping.launch  turtlebot3_key.launch  turtlebot3_laber_1_world.launch  turtlebot3_laber_2_world.launch  turtlebot3_world.launch
turtlebot3_simulations/turtlebot3_gazebo/worlds/: corri.world  cycle_world.world  key_world.world  laber91.world  laber_91.world  large.world  long.world  long1.world  loop.world  placed3.world  placed_1.world  placed_2.world  placed_2_1.world  placed_3.world  placed_3_1.world  small.world  small6.world  turtlebot3_stage_11.world  turtlebot3_stage_20.world  turtlebot3_stage_200.world  turtlebot3_stage_21.world  turtlebot3_world.world  turtlebot3_world1.world
