<?xml version="1.0"?>
<package format="2">
  <name>sunray_swarm_sim</name>
  <version>0.0.0</version>
  <description>The sunray_swarm_sim package</description>

  <maintainer email="sirui@yundrone.com">YunDrone Tech</maintainer>
  
  <license>TODO</license>

  <url type="website">http://www.xxxx.com/</url>
  <url type="repository">https://github.com/potato77/orca.git</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>




  <export>

  </export>
</package>
